--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=chit-fund
 spring.profiles.active=local
-spring.datasource.url = jdbc:mysql://localhost:3306/eams?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/chitfund?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
